--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,13 +956,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/muratdemiraslan/Out Cloud Files/GitHub/CS445_Fake_News_detection/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased-finetuned-sst-2-english and are newly initialized because the shapes did not match:\n",
       "- classifier.bias: found shape torch.Size([2]) in the checkpoint and torch.Size([6]) in the model instantiated\n",
       "- classifier.weight: found shape torch.Size([2, 768]) in the checkpoint and torch.Size([6, 768]) in the model instantiated\n",
@@ -1226,14 +1228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 12791/12791 [00:01<00:00, 11104.25 examples/s]\n"
+      "Map: 100%|██████████| 12791/12791 [00:01<00:00, 12237.32 examples/s]\n"
      ]
     }
    ],
@@ -1257,16 +1259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 4: Split the Dataset\n",
-    "splitted_dataset = encoded_dataset.train_test_split(test_size=0.2)\n",
+    "splitted_dataset = encoded_dataset.train_test_split(test_size=0.2,seed=42)\n",
     "train_dataset = splitted_dataset[\"train\"]\n",
     "#train_dataset = splitted_dataset[\"train\"].shuffle(42).select(range(300))\n",
     "\n",
-    "evalll_dataset = splitted_dataset[\"test\"].train_test_split(test_size=0.5)\n",
+    "evalll_dataset = splitted_dataset[\"test\"].train_test_split(test_size=0.5,seed=42)\n",
     "val_dataset = evalll_dataset['train']\n",
     "test_dataset = evalll_dataset['test']\n",
     "#val_dataset = evalll_dataset['train'].shuffle(42).select(range(300))\n",
@@ -1275,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1289,7 @@
        "})"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1318,7 @@
        "})"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,16 +1329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/muratdemiraslan/Out Cloud Files/GitHub/CS445_Fake_News_detection/.venv/lib/python3.12/site-packages/transformers/training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n",
-      "/var/folders/9y/95mkwd2510d9nppjdk99shfm0000gn/T/ipykernel_17255/1574493767.py:26: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/9y/95mkwd2510d9nppjdk99shfm0000gn/T/ipykernel_2953/1574493767.py:26: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n"
      ]
     }
@@ -1402,21 +1402,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = \"./results/model_bert\" # Path to the saved model\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "195it [01:31,  2.14it/s]                         "
+      "100%|██████████| 160/160 [01:00<00:00,  2.64it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_results: {'eval_loss': 1.6828114986419678, 'eval_accuracy': 0.265625, 'eval_f1': 0.2445776514783559, 'eval_precision': 0.2822659542800012, 'eval_recall': 0.265625, 'eval_runtime': 62.7461, 'eval_samples_per_second': 20.4, 'eval_steps_per_second': 2.55, 'epoch': 3.0}\n"
+      "test_results: {'eval_loss': 1.5815726518630981, 'eval_model_preparation_time': 0.0023, 'eval_accuracy': 0.3546875, 'eval_f1': 0.3362959495842654, 'eval_precision': 0.38942091403097506, 'eval_recall': 0.3546875, 'eval_runtime': 61.0186, 'eval_samples_per_second': 20.977, 'eval_steps_per_second': 2.622}\n"
      ]
     },
     {
@@ -1428,9 +1438,6 @@
     }
    ],
    "source": [
-    "model_path = \"./results/model_bert\" # Path to the saved model\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_path)\n",
-    "\n",
     "# Step 11: Make Predictions\n",
     "test_results = trainer.evaluate(test_dataset)\n",
     "print(f'test_results: {test_results}')"
@@ -1438,21 +1445,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 160/160 [00:31<00:00,  5.10it/s]"
+      "100%|██████████| 160/160 [00:59<00:00,  2.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_results: {'eval_loss': 1.6839221715927124, 'eval_accuracy': 0.28046875, 'eval_f1': 0.2532648974063987, 'eval_precision': 0.26991166180723286, 'eval_recall': 0.28046875, 'eval_runtime': 32.5109, 'eval_samples_per_second': 39.371, 'eval_steps_per_second': 4.921, 'epoch': 3.0}\n"
+      "test_results: {'eval_loss': 1.5797698497772217, 'eval_model_preparation_time': 0.0023, 'eval_accuracy': 0.32603596559812353, 'eval_f1': 0.3049591915275516, 'eval_precision': 0.3470990289440112, 'eval_recall': 0.32603596559812353, 'eval_runtime': 60.3023, 'eval_samples_per_second': 21.21, 'eval_steps_per_second': 2.653}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 11: Make Predictions\n",
+    "eval_results = trainer.evaluate()\n",
+    "print(f'test_results: {eval_results}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 160/160 [00:31<00:00,  5.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_results: {'eval_loss': 1.6677677631378174, 'eval_model_preparation_time': 0.0007, 'eval_accuracy': 0.27890625, 'eval_f1': 0.2524039576641807, 'eval_precision': 0.2763667050751859, 'eval_recall': 0.27890625, 'eval_runtime': 31.3814, 'eval_samples_per_second': 40.789, 'eval_steps_per_second': 5.099}\n"
      ]
     },
     {
