--- a/main.ipynb
+++ b/main.ipynb
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1308,8 +1308,595 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▎         | 138/3840 [01:22<37:28,  1.65it/s]"
+      "  5%|▌         | 200/3840 [01:59<35:54,  1.69it/s]"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7589, 'grad_norm': 4.883069038391113, 'learning_rate': 9.479166666666667e-06, 'epoch': 0.16}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  8%|▊         | 300/3840 [02:56<33:59,  1.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7496, 'grad_norm': 4.372077465057373, 'learning_rate': 9.21875e-06, 'epoch': 0.23}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 400/3840 [03:54<32:59,  1.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7416, 'grad_norm': 4.108571529388428, 'learning_rate': 8.958333333333334e-06, 'epoch': 0.31}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 13%|█▎        | 500/3840 [04:51<31:56,  1.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7312, 'grad_norm': 4.915768623352051, 'learning_rate': 8.697916666666667e-06, 'epoch': 0.39}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 16%|█▌        | 600/3840 [05:49<31:04,  1.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7446, 'grad_norm': 4.612335205078125, 'learning_rate': 8.4375e-06, 'epoch': 0.47}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 18%|█▊        | 700/3840 [06:47<30:09,  1.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7279, 'grad_norm': 6.012676239013672, 'learning_rate': 8.177083333333335e-06, 'epoch': 0.55}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 21%|██        | 800/3840 [07:45<29:22,  1.72it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7112, 'grad_norm': 5.40411901473999, 'learning_rate': 7.916666666666667e-06, 'epoch': 0.62}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 23%|██▎       | 900/3840 [08:44<28:19,  1.73it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.733, 'grad_norm': 4.8821024894714355, 'learning_rate': 7.656250000000001e-06, 'epoch': 0.7}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 26%|██▌       | 1000/3840 [09:42<27:05,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.7173, 'grad_norm': 4.239837646484375, 'learning_rate': 7.395833333333335e-06, 'epoch': 0.78}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|██▊       | 1100/3840 [10:39<26:53,  1.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6865, 'grad_norm': 4.661250591278076, 'learning_rate': 7.135416666666667e-06, 'epoch': 0.86}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 31%|███▏      | 1200/3840 [11:37<25:22,  1.73it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6896, 'grad_norm': 5.271162033081055, 'learning_rate': 6.875e-06, 'epoch': 0.94}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                   \n",
+      " 33%|███▎      | 1280/3840 [12:55<24:35,  1.73it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 1.6652873754501343, 'eval_accuracy': 0.2866043613707165, 'eval_f1': 0.24112891984355084, 'eval_precision': 0.2751143837922313, 'eval_recall': 0.2866043613707165, 'eval_runtime': 31.3473, 'eval_samples_per_second': 40.96, 'eval_steps_per_second': 5.136, 'epoch': 1.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 34%|███▍      | 1300/3840 [13:08<24:50,  1.70it/s]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6694, 'grad_norm': 4.649463176727295, 'learning_rate': 6.614583333333334e-06, 'epoch': 1.02}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 36%|███▋      | 1400/3840 [14:06<23:16,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.657, 'grad_norm': 6.24275541305542, 'learning_rate': 6.354166666666667e-06, 'epoch': 1.09}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|███▉      | 1500/3840 [15:03<22:15,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6923, 'grad_norm': 6.4693803787231445, 'learning_rate': 6.093750000000001e-06, 'epoch': 1.17}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 42%|████▏     | 1600/3840 [16:00<21:18,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6485, 'grad_norm': 6.078817844390869, 'learning_rate': 5.833333333333334e-06, 'epoch': 1.25}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 44%|████▍     | 1700/3840 [16:57<20:22,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6516, 'grad_norm': 5.450657367706299, 'learning_rate': 5.572916666666667e-06, 'epoch': 1.33}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 47%|████▋     | 1800/3840 [17:54<19:25,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6466, 'grad_norm': 7.459937572479248, 'learning_rate': 5.3125e-06, 'epoch': 1.41}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 49%|████▉     | 1900/3840 [18:51<18:28,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6502, 'grad_norm': 8.594121932983398, 'learning_rate': 5.0520833333333344e-06, 'epoch': 1.48}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 52%|█████▏    | 2000/3840 [19:48<17:30,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6734, 'grad_norm': 7.992577075958252, 'learning_rate': 4.791666666666668e-06, 'epoch': 1.56}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 55%|█████▍    | 2100/3840 [20:45<16:33,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6383, 'grad_norm': 6.124468803405762, 'learning_rate': 4.53125e-06, 'epoch': 1.64}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|█████▋    | 2200/3840 [21:43<15:36,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6234, 'grad_norm': 7.284863471984863, 'learning_rate': 4.270833333333333e-06, 'epoch': 1.72}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|█████▉    | 2300/3840 [22:40<14:39,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6419, 'grad_norm': 8.560179710388184, 'learning_rate': 4.010416666666667e-06, 'epoch': 1.8}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 62%|██████▎   | 2400/3840 [23:37<13:42,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6382, 'grad_norm': 10.511317253112793, 'learning_rate': 3.7500000000000005e-06, 'epoch': 1.88}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 65%|██████▌   | 2500/3840 [24:34<12:45,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6395, 'grad_norm': 6.26188850402832, 'learning_rate': 3.4895833333333333e-06, 'epoch': 1.95}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                   \n",
+      " 67%|██████▋   | 2560/3840 [25:39<12:09,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 1.6570632457733154, 'eval_accuracy': 0.29750778816199375, 'eval_f1': 0.28703616340031063, 'eval_precision': 0.30555070446436916, 'eval_recall': 0.29750778816199375, 'eval_runtime': 31.0721, 'eval_samples_per_second': 41.323, 'eval_steps_per_second': 5.181, 'epoch': 2.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 68%|██████▊   | 2600/3840 [26:04<11:48,  1.75it/s]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6101, 'grad_norm': 8.849465370178223, 'learning_rate': 3.229166666666667e-06, 'epoch': 2.03}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 2700/3840 [27:01<10:50,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5716, 'grad_norm': 9.81274127960205, 'learning_rate': 2.96875e-06, 'epoch': 2.11}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 73%|███████▎  | 2800/3840 [27:58<09:53,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.589, 'grad_norm': 8.144425392150879, 'learning_rate': 2.7083333333333334e-06, 'epoch': 2.19}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 76%|███████▌  | 2900/3840 [28:55<08:56,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5858, 'grad_norm': 6.853235244750977, 'learning_rate': 2.4479166666666666e-06, 'epoch': 2.27}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 78%|███████▊  | 3000/3840 [29:52<07:59,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5721, 'grad_norm': 7.764625549316406, 'learning_rate': 2.1875000000000002e-06, 'epoch': 2.34}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 81%|████████  | 3100/3840 [30:49<07:02,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5946, 'grad_norm': 8.420500755310059, 'learning_rate': 1.9270833333333334e-06, 'epoch': 2.42}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 83%|████████▎ | 3200/3840 [31:46<06:05,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5705, 'grad_norm': 8.438122749328613, 'learning_rate': 1.6666666666666667e-06, 'epoch': 2.5}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 86%|████████▌ | 3300/3840 [32:43<05:08,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5723, 'grad_norm': 9.011326789855957, 'learning_rate': 1.40625e-06, 'epoch': 2.58}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 89%|████████▊ | 3400/3840 [33:40<04:11,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.6051, 'grad_norm': 9.777897834777832, 'learning_rate': 1.1458333333333333e-06, 'epoch': 2.66}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 91%|█████████ | 3500/3840 [34:37<03:14,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5794, 'grad_norm': 7.3569254875183105, 'learning_rate': 8.854166666666668e-07, 'epoch': 2.73}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 94%|█████████▍| 3600/3840 [35:34<02:17,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5823, 'grad_norm': 9.484441757202148, 'learning_rate': 6.25e-07, 'epoch': 2.81}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|█████████▋| 3700/3840 [36:32<01:19,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5681, 'grad_norm': 8.615862846374512, 'learning_rate': 3.6458333333333337e-07, 'epoch': 2.89}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 99%|█████████▉| 3800/3840 [37:29<00:22,  1.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 1.5483, 'grad_norm': 6.969524383544922, 'learning_rate': 1.0416666666666667e-07, 'epoch': 2.97}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                   \n",
+      "100%|██████████| 3840/3840 [38:24<00:00,  1.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 1.6614820957183838, 'eval_accuracy': 0.2897196261682243, 'eval_f1': 0.2854510351611686, 'eval_precision': 0.29977855105683193, 'eval_recall': 0.2897196261682243, 'eval_runtime': 31.098, 'eval_samples_per_second': 41.289, 'eval_steps_per_second': 5.177, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3840/3840 [38:26<00:00,  1.67it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_runtime': 2306.0153, 'train_samples_per_second': 13.322, 'train_steps_per_second': 1.665, 'train_loss': 1.6515616993109385, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=3840, training_loss=1.6515616993109385, metrics={'train_runtime': 2306.0153, 'train_samples_per_second': 13.322, 'train_steps_per_second': 1.665, 'total_flos': 4069688774492160.0, 'train_loss': 1.6515616993109385, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1319,9 +1906,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 161/161 [00:31<00:00,  5.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results: {'eval_loss': 1.6570632457733154, 'eval_accuracy': 0.29750778816199375, 'eval_f1': 0.28703616340031063, 'eval_precision': 0.30555070446436916, 'eval_recall': 0.29750778816199375, 'eval_runtime': 31.4276, 'eval_samples_per_second': 40.856, 'eval_steps_per_second': 5.123, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 10: Evaluate the Model\n",
     "results = trainer.evaluate()\n",
@@ -1330,9 +1939,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 159/159 [00:31<00:00,  5.04it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results: {'eval_loss': 1.6393495798110962, 'eval_accuracy': 0.303078137332281, 'eval_f1': 0.29395141312655454, 'eval_precision': 0.31433165531369883, 'eval_recall': 0.303078137332281, 'eval_runtime': 31.8653, 'eval_samples_per_second': 39.761, 'eval_steps_per_second': 4.99, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "results=trainer.evaluate(tokenized_dataset['test'])\n",
     "print(f'results: {results}')"
@@ -1340,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
